Initial commit, including nav menu and top bar

--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -16,7 +16,7 @@
         android:foregroundGravity="center_vertical"
         android:layout_centerVertical="true"
         android:scaleType="fitStart"
-        android:text="THE GAIA TRAVEL APP"
-        android:textSize="18dp" />
+        android:text="@string/gaia"
+        android:textSize="18sp" />
 
 </android.support.constraint.ConstraintLayout>
