--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -10,34 +10,75 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
+    <!--<LinearLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal">-->
+    <!--<ImageButton-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:src="@drawable/food"-->
+        <!--/>-->
+        <!--<ImageButton-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/food"-->
+            <!--/>-->
+        <!--<ImageButton-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/food"-->
+            <!--/>-->
+        <!--<ImageButton-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/food"-->
+            <!--/>-->
+        <!--<ImageButton-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/food"-->
+            <!--/>-->
+    <!--</LinearLayout>-->
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/food"
-        />
+        android:background="@drawable/drawable_line_bottom">
+
         <ImageButton
+            android:id="@+id/food_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/food"
-            />
+            android:layout_gravity="center"
+            android:src="@drawable/food" />
+
         <ImageButton
+            android:id="@+id/theatre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/food"
-            />
+            android:layout_gravity="bottom"
+            android:src="@drawable/theater" />
+
         <ImageButton
+            android:id="@+id/architecture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/food"
-            />
+            android:layout_gravity="center"
+            android:src="@drawable/arch" />
+
         <ImageButton
+            android:id="@+id/sleep"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/food"
-            />
+            android:layout_gravity="bottom"
+            android:src="@drawable/hotel" />
+
+        <ImageButton
+            android:id="@+id/shop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/cart" />
+
     </LinearLayout>
 </FrameLayout>
