--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,8 +25,8 @@
             android:icon="@drawable/news"/>
 
         <item
-            android:id="@+id/nav_near_you"
-            android:title="@string/near_you"
+            android:id="@+id/nav_places"
+            android:title="@string/places"
             android:icon="@drawable/place"
             />
 
