--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -43,41 +43,53 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="fill_horizontal"
+        android:gravity="center_horizontal"
         android:background="@drawable/drawable_line_bottom">
 
         <ImageButton
             android:id="@+id/food_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="74dp"
+            android:layout_height="74dp"
             android:layout_gravity="center"
-            android:src="@drawable/food" />
+            android:src="@drawable/food"
+            android:background="@null"
+
+            />
+
 
         <ImageButton
             android:id="@+id/theatre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:src="@drawable/theater" />
+            android:layout_width="74dp"
+            android:layout_height="74dp"
+            android:layout_gravity="center"
+            android:src="@drawable/theater"
+            android:background="@null"
+            />
 
         <ImageButton
             android:id="@+id/architecture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="74dp"
+            android:layout_height="74dp"
             android:layout_gravity="center"
-            android:src="@drawable/arch" />
+            android:src="@drawable/arch"
+            android:background="@null" />
 
         <ImageButton
             android:id="@+id/sleep"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
+            android:layout_width="74dp"
+            android:layout_height="74dp"
+            android:layout_gravity="center"
+            android:background="@null"
             android:src="@drawable/hotel" />
 
         <ImageButton
             android:id="@+id/shop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="74dp"
+            android:layout_height="74dp"
             android:layout_gravity="center"
+            android:background="@null"
             android:src="@drawable/cart" />
 
     </LinearLayout>
