--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -8,34 +8,48 @@
     <LinearLayout
         android:background="@drawable/drawable_line_bottom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageButton android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="fill_horizontal"
+        android:gravity="center_horizontal">
+
+        <ImageButton
             android:src="@drawable/food"
             android:id="@+id/food_button"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:background="@null"
+            android:layout_width="74dp"
+            android:layout_height="74dp"/>
 
-        <ImageButton android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageButton
             android:src="@drawable/theater"
             android:id="@+id/theatre"
-            android:layout_gravity="bottom"/>
-        <ImageButton android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@null"
+            android:layout_width="74dp"
+            android:layout_height="74dp"/>
+        <ImageButton
+            android:layout_width="74dp"
+            android:layout_height="74dp"
             android:src="@drawable/arch"
             android:id="@+id/architecture"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:background="@null"/>
 
-        <ImageButton android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageButton
+            android:layout_width="74dp"
+            android:layout_height="74dp"
             android:src="@drawable/hotel"
             android:id="@+id/sleep"
-            android:layout_gravity="bottom"/>
-        <ImageButton android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@null"/>
+        <ImageButton
+            android:layout_width="74dp"
+            android:layout_height="74dp"
             android:src="@drawable/cart"
             android:id="@+id/shop"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:background="@null"/>
 
     </LinearLayout>
 
