--- a/app/src/main/res/layout/gaia_trip_name_layout.xml
+++ b/app/src/main/res/layout/gaia_trip_name_layout.xml
@@ -12,14 +12,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="70dp"
         android:layout_marginTop="15dp"
         android:foregroundGravity="center_vertical"
         android:gravity="center"
         android:scaleType="fitStart"
         android:text="@string/news"
         android:textColor="#ff0000"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:layout_toLeftOf="@id/gaia_name_text"
+        android:layout_marginRight="15dp"/>
 
 
     <TextView
